[package]
name = "sc2mpz"
version = "1.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.1", features = ["derive"] }
phf = { version = "0.11.1", features = ["macros"] }
rmp-serde = "1.1.1"
serde = { version = "1.0.152", features = ["derive", "rc"] }
strum = "0.24.1"
strum_macros = "0.24.3"
log = "0.4.17"
simplelog = "0.12.0"
flate2 = "1.0.25"
